--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>copyright &copy; Anas with  <i class="uil uil-heart"></i>by Nassim</p>
+            <p>copyright &copy; Anas chaabi with  <i class="uil uil-heart"></i>Nassim's website</p>
         </div>
     </div>
     <script> 
