--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">ABOUT ME </h1>
-                    <p> <h2>i am Nassim Tanfioui  i have been working online since 2013 , i have created so many websites online and this is one of mine where i can offer these services as well </h2></p>
+                    <p> <h2>I am Nassim Tanfioui this is my website where it does tell you more about my work and my buisness online ,please look at the description and the services below </h2></p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Services</p>
